style.css
@import url('https://fonts.googleapis.com/css2?family=Inika');

/* General formatting */
body {
	padding: 0 10px;
	font: 18px/1.5 -apple-system, BlinkMacSystemFont, "avenir next", avenir, "Segoe UI", "lucida grande", "helvetica neue", helvetica, "Fira Sans", roboto, noto, "Droid Sans", cantarell, oxygen, ubuntu, "franklin gothic medium", "century gothic", "Liberation Sans",
		sans-serif;
}

h1,
h2,
h3 {
	line-height: 1.2
}

/* Your text should be in a nice narrow column */
.content-column {
	max-width: 650px;
	margin: 40px auto;
}

/* But your visualization should be full-width and full-height */
.vis-holder {
	width: 100%;
	height: 100%;
}

/* Fork on GitHub ribbon via https://codepo8.github.io/css-fork-on-github-ribbon/# */
#forkongithub a {
	background: #00F;
	color: #fff;
	text-decoration: none;
	font-family: arial, sans-serif;
	text-align: center;
	font-weight: bold;
	padding: 5px 40px;
	font-size: 1rem;
	line-height: 1.4rem;
	position: relative;
	transition: 0.5s;
}

#forkongithub a:hover {
	background: #118;
	color: #fff;
}

#forkongithub a::before,
#forkongithub a::after {
	content: "";
	width: 100%;
	display: block;
	position: absolute;
	top: 1px;
	left: 0;
	height: 1px;
	background: #fff;
}

#forkongithub a::after {
	bottom: 1px;
	top: auto;
}

@media screen and (min-width:1000px) {
	#forkongithub {
		position: fixed;
		display: block;
		top: 0;
		right: 0;
		width: 200px;
		overflow: hidden;
		height: 200px;
		z-index: 9999;
	}

	#forkongithub a {
		width: 200px;
		position: absolute;
		top: 60px;
		right: -60px;
		transform: rotate(45deg);
		-webkit-transform: rotate(45deg);
		-ms-transform: rotate(45deg);
		-moz-transform: rotate(45deg);
		-o-transform: rotate(45deg);
		box-shadow: 4px 4px 10px rgba(0, 0, 0, 0.8);
	}
}

/* Bisrat: styling form */
#pick-period {
	display: flex;
	justify-content: center;
	align-items: center;
}


#vis-svg {
	width: 100%;
	height: 100%;
	display: flex;
	height: 800px;
	justify-content: center;
	align-items: center;
	overflow-x: auto;
	white-space: nowrap;
}


.my-table {
	margin-left: auto;
	margin-top: 40px;
	margin-right: auto;
	width: 100%;
	table-layout: fixed;
}

.my-table th,
.my-table td {
	text-align: center;
	padding: 8px;
	border: 1px solid #ddd;
	box-sizing: border-box;
}

.my-table tbody {
	display: block;
	max-height: 400px;
	overflow-y: auto;
}

.my-table thead,
.my-table tbody tr {
	display: table;
	width: 100%;
	table-layout: fixed;
}

.my-table thead {
	display: table;
	width: calc(100%);
}

.my-table th {
	width: calc(100% / 7);
}

.my-table td {
	width: calc(100% / 7);
}

/* Bisrat: brushing and linking  */


/* rect.selected {
	fill: green;
	stroke: red;
	opacity: 5;
}

tr.selected {
	background-color: rgb(192, 248, 255);
}

table.text-unselectable {
	-webkit-touch-callout: none;
	-webkit-user-select: none;
	-khtml-user-select: none;
	-moz-user-select: none;
	-ms-user-select: none;
	-o-user-select: none;
	user-select: none;
	cursor: default;
  }

tr.mouseover {
	background-color: #d6d6d6;
}

tr.mouseover.selected {
	background-color: #e08fa3;
} */

.vis-holder {
	width: 100%;
	max-width: 1150px;
	margin: auto;
  }

  .tooltip {
	position: absolute;
	padding: 10px;
	background-color: #5b5b5b;
	border: 2px solid #000000;
	color: white;
	border-radius: 5px;
	pointer-events: none;
	opacity: 0;
	transition: opacity 0.3s;
	font-family: 'Inika', serif;
  }

  .tooltip {
	position: absolute;
	padding: 10px;
	background-color: #5b5b5b;
	border: 2px solid #000000;
	color: white;
	border-radius: 5px;
	pointer-events: none;
	opacity: 0;
	transition: opacity 0.3s;
	font-family: 'Inika', serif;
  }

